# ipftrace2

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Makefile  Makefile.bpf  README.md  README.tmpl.md  btf.c  debuginfo.c  dwarf.c  ipftrace.bpf.c  ipftrace.c  ipftrace.elf.h  ipftrace.h  ipftrace.skel.h  kallsyms.c  khash.h  klist.h  symsdb.c  trace.c  trace_store.c  tracedb.c
.github/workflows/: build.yml  release.yml  smoke-test.yml
cmake/: FindLibBpf.cmake  FindLibDw.cmake  FindLibElf.cmake  FindLibFts.cmake  FindLibLua.cmake  FindLibPcre.cmake  FindLibReadline.cmake
docker/: Dockerfile  Dockerfile.build_static
docs/: bpf_extension.md  bpf_extension.tmpl.md  internal.md  ipftrace2_marking.drawio  lua_extension.md  marking.md  output.md  scripting.md
example/: gso.bpf.c  gso.lua  vmlinux.h
example/aggregation/: aggregate.py
example/extensions/bpf/gso/: Makefile  gso.bpf.c
example/extensions/lua/gso/: gso.bpf.c
example/gso/: Makefile  gso.bpf.c  gso.lua
scripts/: build_bpf_skel.sh  build_image.sh  build_static.sh  docs.sh  format.sh  gso.lua  make.sh  pre-commit
src/: CMakeLists.txt  Makefile  Makefile.bpf  bpf.c  bpf.h  bpf.lua  bpf_lua.h  btf.c  debuginfo.c  dwarf.c  ipft.bpf.c  ipft.bpf.o.h  ipft.bpf.skel.h  ipft.c  ipft.h  ipft_body.bpf.h  ipft_common.bpf.h  ipft_common.h  ipft_ftrace.bpf.c  ipft_ftrace.bpf.o.h  ipft_kprobe.bpf.c  ipft_kprobe.bpf.o.h  ipft_kprobe_multi.bpf.c  ipft_kprobe_multi.bpf.o.h  ipftrace.bpf.c  ipftrace.c  ipftrace.elf.h  ipftrace.h  kallsyms.c  khash.h  klist.h  kvec.h  null_module.bpf.c  null_module.bpf.o.h  output.c  output_aggregate.c  output_json.c  output_stream.c  perf.c  regex.c  (+9 more)
src/compat/linux/: types.h
tests/: Vagrantfile.archlinux-latest  Vagrantfile.centos-stream8  Vagrantfile.rocky-linux8  read_all_registers.lua  run_test.sh  smoke-test.sh  stack_range_invalid.lua  stack_range_valid.lua  write_all_registers.lua
